@@ -1,8 +1,10 @@
 (fn length (x)
   (? x
-     (? (cons? x)
-        (list-length x)
-        x.length)
+     (?
+       (cons? x)            (list-length x)
+       (defined? x.length)  x.length
+       (object? x)          (list-length (property-names x))
+       (error "LENGTH cannot handle %o." x))
      0))
 
 (fn split (obj seq &key (test #'eql))
